[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "restorers"
dynamic = ["version"]
description = "Image Restoration toolkit in TensorFlow"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "isort==5.10.1",
    "black==22.6.0",
    "pytest==7.1.2",
    "matplotlib>=3.5.3",
    "ml-collections==0.1.1",
    "pillow",
    "tqdm",
    "wandb>=0.13.6"
]

[project.urls]
homepage = "https://github.com/soumik12345/restorers"
repository = "https://github.com/soumik12345/restorers"


